# luac-demo

lua-test-cmake/: CMakeLists.txt  lua-test-cmake.cpp  lua-test-cmake.h  test.lua
windesktopc/: windesktopc.cpp  windesktopc.sln  windesktopc.vcxproj  windesktopc.vcxproj.filters
windesktopc/lib/: lua5.4.lib
windesktopc/x64/Debug/: vc143.idb  windesktopc.exe.recipe  windesktopc.ilk  windesktopc.vcxproj.FileListAbsolute.txt
windesktopc/x64/Debug/windesktopc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  windesktopc.lastbuildstate
